--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,7 @@ jobs:
         wget -qO- 'https://github.com/junegunn/fzf-bin/releases/download/0.21.0/fzf-0.21.0-linux_amd64.tgz' | tar xz -C ~/bin
         curl -L https://raw.githubusercontent.com/molovo/revolver/master/revolver > ~/bin/revolver
         curl -L https://github.com/zunit-zsh/zunit/releases/download/v0.8.2/zunit > ~/bin/zunit
+        chmod +x ~/bin/*
 
 
     - name: Run tests
