--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,9 +23,9 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install apt'able dependencies
-    - name: Install zsh, jq and youtube-dl
+    - name: Install zsh, expect, jq and youtube-dl
       run: |
-        sudo apt install zsh jq youtube-dl
+        sudo apt install zsh expect jq youtube-dl
 
     - name: Install executables
       run: |
@@ -38,4 +38,4 @@ jobs:
 
     - name: Run tests
       run: |
-        PATH=${HOME}/bin:${PATH} _PH_MARKS_PLUGIN_DIR=${PWD} make test
+        PATH=${HOME}/bin:${PATH} _PH_MARKS_PLUGIN_DIR=${PWD} unbuffer make test </dev/null
